Layout final com flexbox

--- a/01-Estudos/01-primeiro-site/index.html
+++ b/01-Estudos/01-primeiro-site/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>O meu primeiro site organizado</h1>
-    <p>Estou a aprender a estrutura profissional</p>
+
+    <div class="contentor">
+
+        <div class="cartao">
+            <img src="https://github.com/github.png" alt="Logo GitHub" width="100">
+            <h1>Perfil Dev</h1>
+            <p>A construir o meu futuro.</p>
+            <button>Contactar</button>
+        </div>
+
+        <div class="produto-destaque">
+            <h2>Reprogramação ECU</h2>
+            <p>Aumente a potência. 250€</p>
+            <button>Comprar</button>
+        </div>
+
+    </div>
+
 </body>
 </html>
